mypds/kube/production/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: cohesiv
  name: mypds-deployment
spec:
  revisionHistoryLimit: 5
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 40%
  template:
    metadata:
      labels:
        app: mypds
    spec:
      # [START containers]
      containers:
      - name: mypds
        image: "750213922035.dkr.ecr.us-east-1.amazonaws.com/singularity/mypds:master"
        imagePullPolicy: Always
        ports:
        - containerPort: 4040
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            memory: 256Mi
        livenessProbe:
          initialDelaySeconds: 10
          tcpSocket:
            port: 4040
      # [END containers]
